# RustRouter

./: .gitignore  .gitmodules
contracts/aptos/: Move.toml
contracts/aptos/pairs/pancake/: Move.toml
contracts/aptos/pairs/pancake/sources/: pancake-pair.move
contracts/aptos/sources/pairs/pancake/: pancake-pair.move
contracts/aptos/sources/router/: router.move
router/: Cargo.toml  build.sh  descriptors.json  networks.json  registerys.json  run.sh
router/src/: aptos_transaction_watcher.rs  main.rs  manager.rs  pairs.rs  registrys.rs  router.rs  types.rs  utils.rs
router/src/pairs/: liquidswap_pair.rs  pancake_pair.rs
router/src/registrys/: liquidswap_registry.rs  pancake_registry.rs
router/src/routes/: find_best_routes.rs
