[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
http = "0.2.9"
reqwest = "0.11.17"
serde = "1.0.160"
serde_json = "1.0.96"