[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
async-trait = "0.1.83"
axum = "0.7.9"
erased-serde = "0.3.25"
ethers-core = "2.0.14"
http = "0.2.9"
regex = "1.11.1"
reqwest = "0.11.17"
serde = "1.0.160"
serde_json = "1.0.96"
time = "0.3.37"
tokio = "1.42.0"
tracing-subscriber = "0.3.19"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[build]
rustflags = ["--cfg", "tokio_unstable"]
